--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,34 @@ body {
   line-height: 1.6;
   background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
+
+.main {
+  width: 50%;
+  text-align: center;
+  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in;
+}
+
+.main h1 {
+  font-size: 40px;
+}
+
+.main p {
+  font-size: 20px;
+  color: #333;
+}
+
+a.btn {
+  text-decoration: none;
+  background-color: purple;
+  color: #fff;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  display: inline-block;
+  margin-top: 1rem;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
